# lexical-drift

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/dashboard/: app.py
configs/: eval_e2e_temporal.yaml  eval_e2e_temporal_calib.yaml  eval_temporal_calib.yaml  eval_temporal_fixed.yaml  eval_temporal_transformer.yaml  eval_temporal_transformer_notime.yaml  eval_temporal_transformer_time.yaml  pretrain_contrastive.yaml  pretrain_temporal_order.yaml  real_eval.yaml  train_baseline.yaml  train_e2e_temporal.yaml  train_e2e_temporal_focal.yaml  train_multitask.yaml  train_nn.yaml  train_temporal.yaml
docs/: report.md
tests/: __init__.py  _requires_torch.py  test_ablation_encoder.py  test_ablation_time_embeddings.py  test_ablation_train_months.py  test_artifact_index_and_paper_report.py  test_benchmark_cli.py  test_contrastive_smoke.py  test_e2e_experiment_framework.py  test_e2e_latest_and_calibration.py  test_e2e_pipeline_smoke.py  test_eval_temporal.py  test_eval_temporal_compare.py  test_eval_temporal_sweep.py  test_experiment_summary.py  test_multitask_smoke.py  test_optional_torch_imports.py  test_real_dataset_loader.py  test_real_prepare_loader.py  test_render_report.py  test_smoke_cli.py  test_synthetic_generation.py  test_temporal_cache_fingerprint.py  test_temporal_cache_reuse.py  test_temporal_dataset.py  test_temporal_gru_forward.py  test_temporal_order_pretraining_smoke.py  test_temporal_transformer_smoke.py  test_temporal_transformer_time_embeddings_unit.py  test_train_baseline.py  test_train_nn.py
(+50 files in other folders)
