[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lexical-drift"
version = "0.1.0"
description = "Minimal lexical drift detection research prototype"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "lexical-drift contributors" }]
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "pyyaml",
  "typer",
  "joblib",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "pre-commit",
]
dl = [
  "torch",
]
nlp = [
  "transformers>=4.40",
]

[project.scripts]
lexdrift = "lexical_drift.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/lexical_drift/cli.py" = ["B008"]
